<resources>
    <string name="app_name">ethme</string>
    <string name="welcome_text">Hello there :)\nWelcome to Ethereum!\n\nLet\'s start with a wallet...</string>
    <string name="welcome_restore_wallet">Restore old Wallet</string>
    <string name="welcome_create_wallet">Create a new Wallet</string>
    <string name="instructions_text">\n<b>Important Notice!</b>\n\n
        \u25CF Following <b>12 words</b> are your <b>mnemonic seed</b> for this wallet.\n\n
        \u25CF This seed is your <b>only recovery option</b> to this wallet!\n<i>(e.g. Something happens to your phone)</i>\n\n
        \u25CF Write it down <b>on paper</b> and keep it somewhere safe.\n\n
        \u25CF <b>Anyone</b> who has access to it, has <b>access to your funds</b> on this wallet.\n\n
        \u25CF If the <b>seed is lost</b>, there is <b>no way to restore</b> this wallet.\n\n
        \u25CF Do <b>not make any digital copy</b> of it!\n\n
        \u25CF <u>Your seed is your money!</u>\n\n
        \u25CF <i>Be responsible!</i>
    </string>
    <string name="btn_continue">Continue</string>
    <string name="instructions_read">Yes, I fully understand my responsibility</string>
    <string name="wallet_creation_header">Generating wallet ...</string>
    <string name="wallet_creation_header_fin">This is your seed:</string>
    <string name="wallet_creation_header_error_file_exists">Old wallet data was found!</string>
    <string name="wallet_creation_info">
        Now write it carefully down and store it in a secure place.\n
        Also consider the word order!\n\n
        <b>Remember: Your seed is your money!</b>
    </string>
    <string name="wallet_creation_info_error_file_exists">If you want to make a new wallet, be sure to have a backup of your old wallet. So you don\'t loose access to your funds!\n\nThen go to settings to delete it or un- and then reinstall the App.</string>
    <string name="pin_creation_1">1</string>
    <string name="pin_creation_2">2</string>
    <string name="pin_creation_3">3</string>
    <string name="pin_creation_4">4</string>
    <string name="pin_creation_5">5</string>
    <string name="pin_creation_6">6</string>
    <string name="pin_creation_7">7</string>
    <string name="pin_creation_8">8</string>
    <string name="pin_creation_9">9</string>
    <string name="pin_creation_0">0</string>
    <string name="nr_0">0</string>
    <string name="nr_1">1</string>
    <string name="nr_2">2</string>
    <string name="nr_3">3</string>
    <string name="nr_4">4</string>
    <string name="nr_5">5</string>
    <string name="nr_6">6</string>
    <string name="nr_7">7</string>
    <string name="nr_8">8</string>
    <string name="nr_9">9</string>
    <string name="nr_10">10</string>
    <string name="nr_11">11</string>
    <string name="nr_12">12</string>
    <string name="nr_13">13</string>
    <string name="nr_14">14</string>
    <string name="nr_15">15</string>
    <string name="nr_16">16</string>
    <string name="nr_17">17</string>
    <string name="nr_18">18</string>
    <string name="nr_19">19</string>
    <string name="nr_20">20</string>
    <string name="nr_21">21</string>
    <string name="nr_22">22</string>
    <string name="nr_23">23</string>
    <string name="nr_24">24</string>
    <string name="pin_pad_empty_cicle" translatable="false">\u25CB</string>
    <string name="pin_pad_full_cicle" translatable="false">\u25CF</string>
    <string name="pin_creation_tv_pin" translatable="false">\u25CB\u25CB\u25CB\u25CB\u25CB</string>
    <string name="pin_creation_del" translatable="false">\u232B</string>
    <string name="pin_creation_reset" translatable="false">\u21ba</string>
    <string name="pin_creation_tv_info">Please setup a PIN</string>
    <string name="pin_creation_tv_info_confirmation">Please confirm your PIN</string>
    <string name="toast_pin_didnt_match">PINs didn\'t match</string>
    <string name="toast_pin_isnt_safe">You can be more creative!\nNo counting up or down nor equal numbers</string>
    <string name="fragment_success">Success!</string>
    <string name="mnemonic_confirmation_header">Confirm your seed:</string>
    <string name="mnemonic_confirmation_info">Please fill in the required words from your seed, to confirm &amp; finish your wallet setup</string>
    <string name="mnemonic_confirmation_success">Congratulations!\n\nYour wallet is now ready!</string>
    <string name="mnemonic_restore_success">Congratulations!\n\nYour wallet is now restored!</string>
    <string name="btn_finish">Finish</string>
    <string name="mnemonic_confirmation_error_nomatch">Not all words matched with your seed!</string>
    <string name="mnemonic_restore_error_invalid_words">These words aren\'t a valid mnemonic phrase!</string>
    <string name="home_send">Send Eth</string>
    <string name="home_receive">Receive Eth</string>
    <string name="home_other">Other options</string>
    <string name="mnemonic_restore_header">Fill in your seed:</string>
    <string name="btn_more">more ...</string>
    <string name="btn_less">... less</string>
    <string name="mnemonic_restore_info">Please fill in all words of your seed you want to restore</string>
</resources>
