<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pin_pad_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinPadActivity">

    <TextView
        style="@style/text_header"
        android:id="@+id/tv_pin_info"
        android:text="@string/pin_creation_tv_info"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_creation_tv_pin"
        android:textSize="70sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:maxHeight="70dp"
        app:layout_constraintBottom_toTopOf="@id/tv_pin_confirmation"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_pin_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_creation_tv_pin"
        android:textSize="70sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:maxHeight="70dp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/pin_grid"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <GridLayout
        android:id="@+id/pin_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_1"
            android:text="@string/pin_creation_1"
            android:tag="1"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_2"
            android:text="@string/pin_creation_2"
            android:tag="2"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_3"
            android:text="@string/pin_creation_3"
            android:tag="3"
            />
        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_4"
            android:text="@string/pin_creation_4"
            android:tag="4"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_5"
            android:text="@string/pin_creation_5"
            android:tag="5"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_6"
            android:text="@string/pin_creation_6"
            android:tag="6"
            />
        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_7"
            android:text="@string/pin_creation_7"
            android:tag="7"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_8"
            android:text="@string/pin_creation_8"
            android:tag="8"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_9"
            android:text="@string/pin_creation_9"
            android:tag="9"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_reset"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_0"
            android:text="@string/pin_creation_0"
            android:tag="0"
            />

        <Button
            style="@style/btn_pin"
            android:id="@+id/btn_pin_del"
            android:text="@string/pin_creation_del"
            />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>