<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/mnemonic_restore_layout"
        >

    <TextView
        style="@style/text_header"
        android:id="@+id/tv_mnemonic_restore_header"
        android:layout_marginTop="10dp"
        android:text="@string/mnemonic_restore_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ScrollView
        android:id="@+id/scrollview_mnemonic_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_mnemonic_restore_header"
        app:layout_constraintBottom_toTopOf="@+id/ll_mnemonic_restore"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <GridLayout
            android:id="@+id/gl_mnemonic_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:columnCount="6"
            android:rowCount="4"
            >

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_1"
                android:textAlignment="viewStart"
                android:text="@string/nr_1"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_1"
                android:textAlignment="viewStart"
                android:autofillHints="password"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_2"
                android:textAlignment="viewStart"
                android:text="@string/nr_2"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_2"
                android:textAlignment="viewStart"
                android:autofillHints="password"
                android:importantForAutofill="no"
                android:maxWidth="50dp"

                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_3"
                android:textAlignment="viewStart"
                android:text="@string/nr_3"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_3"
                android:textAlignment="viewStart"
                android:autofillHints="password"
                android:importantForAutofill="no"
                android:fadingEdgeLength="0dp"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_4"
                android:textAlignment="viewStart"
                android:text="@string/nr_4"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_4"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_5"
                android:textAlignment="viewStart"
                android:text="@string/nr_5"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_5"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_6"
                android:textAlignment="viewStart"
                android:text="@string/nr_6"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_6"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_7"
                android:textAlignment="viewStart"
                android:text="@string/nr_7"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_7"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_8"
                android:textAlignment="viewStart"
                android:text="@string/nr_8"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_8"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_9"
                android:textAlignment="viewStart"
                android:text="@string/nr_9"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_9"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_10"
                android:textAlignment="viewStart"
                android:text="@string/nr_10"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_10"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_11"
                android:textAlignment="viewStart"
                android:text="@string/nr_11"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="abandon"
                android:id="@+id/et_mnemonic_restore_11"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_12"
                android:textAlignment="viewStart"
                android:text="@string/nr_12"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text="about_"
                android:id="@+id/et_mnemonic_restore_12"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_13"
                android:textAlignment="viewStart"
                android:text="@string/nr_13"
                android:visibility="invisible"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_13"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_14"
                android:textAlignment="viewStart"
                android:text="@string/nr_14"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_14"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_15"
                android:textAlignment="viewStart"
                android:text="@string/nr_15"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_15"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_16"
                android:textAlignment="viewStart"
                android:text="@string/nr_16"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_16"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_17"
                android:textAlignment="viewStart"
                android:text="@string/nr_17"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_17"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_18"
                android:textAlignment="viewStart"
                android:text="@string/nr_18"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_18"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_19"
                android:textAlignment="viewStart"
                android:text="@string/nr_19"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_19"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_20"
                android:textAlignment="viewStart"
                android:text="@string/nr_20"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_20"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_21"
                android:textAlignment="viewStart"
                android:text="@string/nr_21"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_21"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_22"
                android:textAlignment="viewStart"
                android:text="@string/nr_22"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_22"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_23"
                android:textAlignment="viewStart"
                android:text="@string/nr_23"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_23"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/tv_mnemonic_restore_24"
                android:textAlignment="viewStart"
                android:text="@string/nr_24"
                android:visibility="gone"
                />
            <EditText
                style="@style/tv_mnemonic"
                android:layout_columnWeight="5"
                android:text=""
                android:id="@+id/et_mnemonic_restore_24"
                android:textAlignment="viewStart"
                android:importantForAutofill="no"
                android:maxWidth="50dp"
                android:visibility="gone"
                />

            <Button
                style="@style/btn_tiny_disabled"
                android:layout_columnSpan="3"
                android:id="@+id/btn_mnemonic_restore_less"
                android:text="@string/btn_less"
                android:layout_gravity="end"
                android:onClick="showLess"
                />

            <Button
                style="@style/btn_tiny"
                android:layout_columnSpan="3"
                android:id="@+id/btn_mnemonic_restore_more"
                android:text="@string/btn_more"
                android:layout_gravity="center"
                android:onClick="showMore"
                />

        </GridLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_mnemonic_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            style="@style/text_info"
            android:id="@+id/tv_mnemonic_restore_info"
            android:text="@string/mnemonic_restore_info"
            android:layout_marginTop="10dp"
            />
        <Button
            style="@style/btn_default_disabled"
            android:id="@+id/btn_mnemonic_restore_finish"
            android:text="@string/btn_finish"
            android:onClick="checkWords"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>