<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/instructions_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/instructions_controls"
            android:fadeScrollbars="false"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/instructions_text"
                            android:textAlignment="center"
                            android:paddingBottom="15dp"
                            android:padding="10dp"
                            android:textSize="18sp"
                            />
                </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/instructions_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/LLcheckedRead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="#eee">
                                <CheckBox
                                    android:id="@+id/checkedRead"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/instructions_read"
                                    android:textSize="20sp"
                                    android:textAlignment="center"
                                    android:gravity="center"
                                    android:layout_margin="15dp"
                                    android:enabled="false"
                                    />
                        </LinearLayout>
                        <Button
                            style="@style/btn_default_disabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/btnContinue"
                            android:text="@string/btn_continue"
                            android:onClick="continueWallet"
                            android:layout_marginTop="10dp"
                            />
                </LinearLayout>
        </LinearLayout>

</RelativeLayout>